5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1668_2971.log
== SUBMITION (2019-04-15 19:12:21) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(valor)
	print(sim)
else:
	print(valor)
	print(nao)
-- EXECUTION TIME:
0.146949
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2971/main.py", line 9, in <module>
    print(sim)
NameError: name 'sim' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:12:58) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(round(valor,2))
	print(sim)
else:
	print(round(valor))
	print(nao)
-- EXECUTION TIME:
0.203047
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2971/main.py", line 9, in <module>
    print(sim)
NameError: name 'sim' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:59) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(round(valor,2))
	print(sim)
else:
	print(round(valor))
	print(nao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(sim)
NameError: name 'sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:13:30) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(round(valor,2))
	print('sim')
else:
	print(round(valor))
	print('nao')
-- EXECUTION TIME:
0.166483
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
125250
sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
300000
sim
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
150000
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:13:35) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(round(valor,2))
	print('sim')
else:
	print(round(valor))
	print('nao')
-- OUTPUT:
125250
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:14:18) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(round(qf,2))
	print('sim')
else:
	print(round(qf,2))
	print('nao')
-- OUTPUT:
143655027.57
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:15:23) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(round(qf,2))
	print('sim')
else:
	print(round(qf,2))
	print('nao')
-- OUTPUT:
143655027.57
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:15:40) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(round(qf,2))
	print('sim')
else:
	print(round(qf,2))
	print('nao')
-- EXECUTION TIME:
0.182406
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
143655027.57
sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
2297277.78
sim
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
10632028.12
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:15:51) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(round(qf,2))
	print('nao')
else:
	print(round(qf,2))
	print('sim')
-- EXECUTION TIME:
0.125967
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
143655027.57
nao
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
2297277.78
nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
10632028.12
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:15:52) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(round(qf,2))
	print('nao')
else:
	print(round(qf,2))
	print('sim')
-- OUTPUT:
143655027.57
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:16:08) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(round(qf,2))
	print('Nao')
else:
	print(round(qf,2))
	print('Sim')
-- EXECUTION TIME:
0.154614
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
143655027.57
Nao
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
2297277.78
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
10632028.12
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:16:09) 
-- CODE:
qo=15000
t=36
j=float(input())
valor=int(input())
qf=qo*(1+j)**t

if (qf>=valor):
	print(round(qf,2))
	print('Nao')
else:
	print(round(qf,2))
	print('Sim')
-- OUTPUT:
143655027.57
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:16:40) 
-- CODE:
j=float(input())
valor=int(input())
qf=1500*(1+j)**36

if (qf>=valor):
	print(round(qf,2))
	print('Nao')
else:
	print(round(qf,2))
	print('Sim')
-- EXECUTION TIME:
0.148035
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76
Nao
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78
Sim
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:16:41) 
-- CODE:
j=float(input())
valor=int(input())
qf=1500*(1+j)**36

if (qf>=valor):
	print(round(qf,2))
	print('Nao')
else:
	print(round(qf,2))
	print('Sim')
-- OUTPUT:
14365502.76
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:16:52) 
-- CODE:
j=float(input())
valor=float(input())
qf=1500*(1+j)**36

if (qf>=valor):
	print(round(qf,2))
	print('Nao')
else:
	print(round(qf,2))
	print('Sim')
-- EXECUTION TIME:
0.184753
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76
Nao
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78
Sim
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:16:53) 
-- CODE:
j=float(input())
valor=float(input())
qf=1500*(1+j)**36

if (qf>=valor):
	print(round(qf,2))
	print('Nao')
else:
	print(round(qf,2))
	print('Sim')
-- OUTPUT:
14365502.76
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:17:19) 
-- CODE:
j=float(input())
valor=float(input())
qf=1500*(1+j)**36

if (qf>=valor):
	print(round(qf,2))
	print('Sim')
else:
	print(round(qf,2))
	print('Nao')
-- EXECUTION TIME:
0.135076
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81
Sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
